# machine_learning

./: .gitignore  README.md  requirements.txt
intro_to_ml/: README.md
intro_to_ml/lab02_clustering/: lab02_clustering.ipynb
intro_to_ml/lab03_linear_logistic_regression/: README.md  lab03_linear_logistic_regression.ipynb
intro_to_ml/lab04_trees_and_ensembles/: README.md  lab04_trees_and_ensembles.ipynb
intro_to_ml/lab05_svm/: lab05_svm.ipynb
intro_to_ml/lab06_dimensionality_reduction/: README.md
intro_to_ml/lab07_pytorch_neural_networks/: README.md  lab07_pytorch_neural_networks.ipynb
intro_to_ml/lab08_nlp_sentiment_analysis/: README.md
lab01_data_preprocessing/: README.md  lab01_data_preprocessing.ipynb
lab02_clustering/: README.md
lab05_svm/: README.md
lab06_dimensionality_reduction/: lab06_dimensionality_reduction.ipynb
lab08_nlp_sentiment_analysis/: lab08_nlp_sentiment_analysis.ipynb
ml_for_data_scientist/: README.md
ml_for_data_scientist/lab01_gradient_boosting_stacking/: README.md  gradient_boosting_and_stacking.ipynb
ml_for_data_scientist/lab02_model_interpretability/: README.md
ml_for_data_scientist/lab03_probabilistic_ml/: Apple_stock_price.csv  README.md  SP500_prices.csv  bayesian_regression_gaussian_processes.ipynb  time_series_arima.ipynb
ml_for_data_scientist/lab04_sequence_models_time_series/: README.md  lstm_attention_forecasting.ipynb
ml_for_data_scientist/lab06_transfer_and_few_shot_learning/: README.md  few_shot_prototypical_networks.ipynb  pyproject.toml  transfer_learning_resnet50.ipynb
(+22 files in other folders)
